@@ -11,6 +11,6 @@
   <package id="JsonFx" version="2.0.1106.2610" />
   <package id="Newtonsoft.Json" version="4.0.3" />
   <package id="oak-edge" version="0.5.4" />
-  <package id="oak-edge" version="1.3.4" targetFramework="net40" />
+  <package id="oak-edge" version="1.3.5" targetFramework="net40" />
   <package id="underscore.js" version="1.1.7" />
 </packages>
