@@ -6,9 +6,14 @@ gemini-edge 0.0.8+
 cambium 1.2.3+
 =============== CHANGES ==================
 - Camibum and company now plays nice with auto properties.
+  If you get the Invalid column name Exception when saving a Gemini, 
+  you can remove properties from Gemini's using the Exclude() method.  
+  Override your repository's GetAttributesToSave()
+  these columns from being persisted.
+  Example: https://github.com/amirrajan/Oak/blob/master/Sample%20Apps/BorrowedGames/BorrowedGames/Repositories/WantedGames.cs
 - Added InitializeExtensions method. If you want to leverage mix-ins, 
   this method need to be explicitly called in the constructor of classes
-  that use *static* autoproperties. Invocation is automatically done
+  that use *static* auto properties. Invocation is automatically done
   if you use dynamic properties.
 - The Expando property in Gemini is now named Prototype.
 - Case invariant dictionary is used now to store dynamic properties (ie Prototype).
